# GameVerse

./: README.md  app.py  check_secret.py  create_botpress_user.py  debug_botpress.py  fresh_setup.py  pyproject.toml
data/: __init__.py  games_data.py
knowledge/: Digital_Delivery_&_Access.txt  KB.txt  Store_Hours_&_Contact.txt  games.csv  gen.py  kb_tech_support_faq.txt  website.txt
utils/: __init__.py  botpress_client.py  helpers.py  styling.py
views/: __init__.py  analytics.py  browse.py  cart.py  chatbot.py  home.py  profile.py  wishlist.py
