[project]
name = "gamestore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sseclient>=0.0.27",
    "sseclient-py>=1.8.0",
    "streamlit>=1.52.0",
]
